<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/basic_color">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/favouriteFragment"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorite"/>
        <item
            android:id="@+id/settingFragment"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/alertFragment"
            android:title="@string/alerts"
            android:icon="@drawable/ic_notifications"/>
    </group>
</menu>