<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splachFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.eman.weatherproject.features.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_settingFragment2"
            app:destination="@id/settingFragment" />
        <argument
            android:name="lat"
            app:argType="float" />
        <argument
            android:name="loong"
            app:argType="float" />

        <argument
            android:name="unit"
            app:argType="string" />
        <argument
            android:name="comeForm"
            app:argType="boolean" />
        <action
            android:id="@+id/action_homeFragment_to_mapFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.eman.weatherproject.features.settings.view.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_settingFragment2_to_mapFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/initialFragment"
        android:name="com.eman.weatherproject.features.initial.InitialFragment"
        android:label="fragment_initial"
        tools:layout="@layout/fragment_initial" >
        <action
            android:id="@+id/action_initialFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_initialFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/splachFragment"
        android:name="com.eman.weatherproject.features.splash.SplachFragment"
        android:label="fragment_splach"
        tools:layout="@layout/fragment_splach" >
        <action
            android:id="@+id/action_splachFragment_to_initialFragment"
            app:destination="@id/initialFragment"
            app:popUpTo="@id/nav_graph" />
        <action
            android:id="@+id/action_splachFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.eman.weatherproject.features.favourities.view.FavouriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_favouriteFragment_to_favouriteDetailsFragment"
            app:destination="@id/favouriteDetailsFragment" />
        <action
            android:id="@+id/action_favouriteFragment_to_mapFragment"
            app:destination="@id/mapsFragment" />
        <argument
            android:name="lat"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="loong"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="address"
            app:argType="string"
            android:defaultValue='"Assuit(default)"' />
        <action
            android:id="@+id/action_favouriteFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteDetailsFragment"
        android:name="com.eman.weatherproject.features.favourities.view.FavouriteDetailsFragment"
        android:label="@string/favourite_details"
        tools:layout="@layout/fragment_favourite_details" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.eman.weatherproject.features.map.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_map" >
        <argument
            android:name="NextFragment"
            app:argType="boolean" />
        <action
            android:id="@+id/action_mapsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.eman.weatherproject.features.alert.view.AlertFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alert" />
</navigation>