<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.view.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/mainLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                app:layout_constraintBottom_toTopOf="@+id/hourlyRecycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/currCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Assiut"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/rounded_corners">

                    <TextView
                        android:id="@+id/currTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="12:23"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/currDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/currDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="Tue, May 3"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/currTime"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/currTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="40"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="60sp"
                        app:layout_constraintBottom_toTopOf="@+id/currDesc"
                        app:layout_constraintEnd_toStartOf="@+id/currIcon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/currTime" />

                    <TextView
                        android:id="@+id/currUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Celsius"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toTopOf="@+id/currDesc"
                        app:layout_constraintStart_toEndOf="@+id/currTemp"
                        app:layout_constraintTop_toBottomOf="@+id/currTime" />

                    <ImageView
                        android:id="@+id/currIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/currTemp"
                        app:layout_constraintTop_toBottomOf="@+id/currDate"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/currDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cloudy"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/currIcon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/currTemp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourlyRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/dailyRecycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainLinearlayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@+id/mainGridlayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hourlyRecycler" />

            <GridLayout
                android:id="@+id/mainGridlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corners"
                android:columnCount="2"
                android:rowCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dailyRecycler">

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/currHumidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="12.12"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/currHumidityUnit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="%"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/humidity" />

                </LinearLayout>

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/currPressure"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="12.12"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/currPressureUnit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=" hpa"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/pressure" />

                </LinearLayout>

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/clouds"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/currClouds"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="12.12"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/currCloudsUnit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="%"
                                android:textColor="@color/white"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/cloud" />

                </LinearLayout>

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/currWindSpeed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="12.12"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/currWindUnit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/windMeter"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/windspeed" />

                </LinearLayout>

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!---->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</FrameLayout>